# facial-analysis-system

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  README.md  create_embedding_database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  scraper.py  setup.cfg  setup.py  setup.sh
configs/: config.yaml  configs.yaml
demo/: demo.ipynb
eda/: emotions.ipynb  gazes.ipynb  misc.ipynb  motions.ipynb  vad.ipynb
logs/: ctrl_logger.log.2023-01-31
scripts/: cluster_person_ids.py  crop_random_faces.py  embeddings.py  query_test.py  video_cutter.py  visualize_embeddings.py
src/: app_controller.py  app_gui.py  controller.py  main.py  setup_file.py
src/data/dataloader/: base_dataloader.py  visual_dataloader.py
src/data/dataprocessor/: face_detector.py  face_tracker.py  tracker.py
src/datahandler/: visualizer.py
src/datahandler/dataloader/: visual_dataloader.py
src/datahandler/dataprocessor/: emotion_detector.py  face_detector.py  face_emotion_detector.py  face_tracker.py  pose_estimator.py
src/datahandler/datawriter/: base_datawriter.py  video_datawriter.py
src/emotion/: app_controller.py  app_gui.py  create_embedding_database.py  dashboard.py  embedder.py  main.py
src/emotion/analysis/: data_preprocessing.py  dataset.py  dataset_generator.py  emotion_entanglement.py  entanglement.py  feature_generator.py  feature_vector.py  (+3 more)
src/utils/: app_enums.py  constants.py  emotion_sets.py  identity.py
tests/: test_identity.py
tests/utils/: test_identity.py  test_logger.py
(+336 files in other folders)
