[metadata]
name = emotion
description = Data Analysis Pipeline for Multi-Modal Emotion Recognition
author = Moritz Mueller
url = https://github.com/mo12896/emotion-recognition.git
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32

[options]
packages = emotion
python_requires = >=3.7
install_requires =
    dataclass-csv
    deepface
    dlib
    matplotlib
    numpy
    opencv-contrib-python
    pre-commit
    PyYAML
    retina-face
    setuptools
    torch
    tqdm
package_dir =
    =src
zip_safe = False

[options.extras_require]
testing =
    pytest
    pytest-cov
    mypy
    flake8
    tox

[options.package_data]
emotion = py.typed


[flake8]
extend-ignore = E203
max-line-length = 133
exclude =
    .git,
    __pycache__,
    venv,
    logs,
    data,
    models,
    docs,
    submodules,
